2005-12-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* screenshot-dialog.c: (screenshot_dialog_get_uri):
	* screenshot-save.c: (screenshot_sanitize_filename): Escape the
	path strings.  Fixes crash reported in bug #319188.

2005-12-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-xfer.c (handle_transfer_ok): fix compiler warnings (patch
	by Kjartan Maraas, closes bug #324552).

2005-10-19  Sebastien Bacher  <seb128@debian.org>

	* screenshot-dialog.c: (screenshot_dialog_new):
	mention gnome-utils instead of gnome-panel (Closes: #167158).

2005-10-19  Sebastien Bacher  <seb128@debian.org>

	* gnome-panel-screenshot.c: (generate_filename_for_uri):
	clean an useless g_print statement (Closes: #319191).

==================== 2.12.0 ====================

Sun Aug 28 01:09:42 2005  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c: (generate_filename_for_uri),
	(prepare_screenshot), (get_desktop_dir), (load_options): Fix
	crasher when we can't access the last saved dir for some reason,
	#309731

2005-08-21  Gustavo Noronha Silva  <kov@debian.org>

	* gnome-panel-screenshot.c:
	- fix typo in variable name "filename" -> "file_name"

2005-08-21  Kang Jeong-Hee <Keizi@mail.co.kr>

	* gnome-panel-screenshot.c, screenshot-dialog.c: Fix wrong order
	of filename charset conversion.

Sun Jul 17 15:04:13 2005  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c: (prepare_screenshot), (load_options):
	* screenshot-shadow.c: (create_outline_filter), (create_effect),
	(screenshot_add_shadow), (screenshot_add_border): *
	screenshot-shadow.h: Patch from Emmanuel Pacaud
	<emmanuel.pacaud@univ-poitiers.fr> to clean up the shadow drawing
	code, #169248.

2005-05-16  Olav Vitters <olav@bkor.dhs.org>

	* gnome-panel-screenshot.c: Fix typo in gconf key (gnome_screenshot
	instead of gnome-screenshot). Fixes bug #303891. Patch by Trent
	"Lathiat" Lloyd.

2005-01-22  Carlos Garnacho Parro  <carlosg@gnome.org>
