@@ -1,6 +1,11 @@
 2005-12-23  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* screenshot-dialog.c: (screenshot_dialog_get_uri):
+	* screenshot-save.c:  Clean up compiler warnings.
+
+2005-12-23  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* screenshot-dialog.c: (screenshot_dialog_get_uri):
 	* screenshot-save.c: (screenshot_sanitize_filename): Escape the
 	path strings.  Fixes crash reported in bug #319188.
 
